--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-bottom-drawer",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "index.js",
   "scripts": {
     "test": "jest"
@@ -21,7 +21,8 @@
     "drawer"
   ],
   "peerDependencies": {
-    "react-native-vector-icons": "^4.0.0"
+    "react-native-vector-icons": "^4.0.0",
+    "react-native-extra-dimensions-android": "^0.21.0",
   },
   "devDependencies": {
     "babel-jest": "^19.0.0",
