--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   ],
   "peerDependencies": {
     "react-native-vector-icons": "^4.0.0",
-    "react-native-extra-dimensions-android": "^0.21.0",
+    "react-native-extra-dimensions-android": "^0.21.0"
   },
   "devDependencies": {
     "babel-jest": "^19.0.0",
